--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ^3.6.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   geolocator: ^11.1.0
   http: ^1.2.2
+  lottie: ^2.4.0
+  google_fonts: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +60,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # Add your Lottie animation JSON file(s) here. Place a json file at
+  # `assets/animations/launch.json` (or change the path below to match your
+  # asset). Example:
+  assets:
+    - assets/animations/
+    
 
   # To add assets to your application, add an assets section, like this:
   # assets:
